updates for performance enhancements to allow an institutional item to be created without it first being added to an institutional collection